--- a/代码随想录/CMakeLists.txt
+++ b/代码随想录/CMakeLists.txt
@@ -5,7 +5,8 @@ set(CMAKE_CXX_STANDARD 20)
 
 set(SOURCES
         main.cpp
-        "src/Array/Binary search.cpp"
+        src/Array/BinarySearch.cpp
+        src/Array/RemoveNums.cpp
 )
 
 add_executable(learn ${SOURCES})
