--- a/代码随想录/CMakeLists.txt
+++ b/代码随想录/CMakeLists.txt
@@ -7,6 +7,9 @@ set(SOURCES
         main.cpp
         src/Array/BinarySearch.cpp
         src/Array/RemoveNums.cpp
+        src/Array/SortedSquared.cpp
+        ../../../../../../tmp/leetcode/editor/cn/[977]有序数组的平方.cpp
 )
 
 add_executable(learn ${SOURCES})
+
