--- a/代码随想录/CMakeLists.txt
+++ b/代码随想录/CMakeLists.txt
@@ -8,7 +8,8 @@ set(SOURCES
         src/Array/BinarySearch.cpp
         src/Array/RemoveNums.cpp
         src/Array/SortedSquared.cpp
-        ../../../../../../tmp/leetcode/editor/cn/[977]有序数组的平方.cpp
+        src/Array/minSubArrayLen.cpp
+        src/Array/generateMatrix.cpp
 )
 
 add_executable(learn ${SOURCES})
