Add reverseStr implementation and update CMakeLists; enhance documentation.

--- a/代码随想录/CMakeLists.txt
+++ b/代码随想录/CMakeLists.txt
@@ -24,6 +24,7 @@ set(SOURCES
         src/Hash/threeSum.cpp
         src/Hash/fourSum.cpp
         src/String/reverseString.cpp
+        src/String/reverseStr.cpp
 )
 
 add_executable(learn ${SOURCES})
